# dart-mcp

./: .gitignore  README.md  cli.py  pyproject.toml  server.py
.omo/drafts/: dart-audit-structured-extraction.md  dart-company-audit-collection.md  dart-kam-llm-tagging.md  dart-search-usability-brief.md  temis-dart-mcp-hardening.md
.omo/evidence/: ac-step1-collector.txt  ac-step2a-zip-classify.json  ac-step2a-zip-classify.txt  ac-step2b-bulk.txt  ac-step2b-single.txt  cleanup-b-live-smoke.txt  final-qa-summary.txt  task-1-temis-dart-mcp-hardening.txt  task-10-temis-dart-mcp-hardening.txt  task-2-temis-dart-mcp-hardening.txt  task-3-temis-dart-mcp-hardening.txt  task-4-temis-dart-mcp-hardening.txt  (+6 more)
dart_search_mcp/: __init__.py  app.py  audit_facts_adapter.py  audit_xml_parser.py  client.py  collect.py  config.py  corp.py  document_extraction.py  document_zip.py  formatting.py  kam_taxonomy.py  redact.py  registries.py  results.py  temis_export.py  types.py  urls.py
docs/: cli.md  tools.md
scripts/: generate_docs.py  qa.py
tests/: test_audit_docs.py  test_audit_facts_adapter.py  test_audit_report_structured.py  test_audit_xml_parser.py  test_bulk_audit.py  test_collect.py  test_corp_redaction.py  test_corp_resolver.py  test_diagnostics.py  test_disclosure_search_structured.py  test_document_extraction.py  test_document_zip.py  test_extract_facts.py  test_kam_tagger.py  test_kam_taxonomy.py  test_public_surface.py  test_redaction.py  test_structured_results.py  test_tag_kam_cli.py  test_temis_export_surface.py  test_temis_topic_case_export.py
(+35 files in other folders)
