[project]
name = "dart-search-mcp"
version = "0.1.0"
description = "MCP server and CLI for Korea DART Open API disclosure, financial statement, and XBRL lookup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "click>=8.0",
]

[project.scripts]
dart = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["cli.py", "server.py", "dart_search_mcp"]
